# FlowerShopFinanceTool

./: pyproject.toml
FlowerShopFinanceTool/: db.sqlite3  manage.py
FlowerShopFinanceTool/FlowerShopFinanceTool/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
FlowerShopFinanceTool/FlowerShopFinanceTool/migrations/: 0001_initial.py  0002_alter_prices_options_prices_date.py  0003_alter_prices_date.py  0004_alter_prices_date.py  0005_flower_image_alter_prices_date.py  0006_alter_flower_image_alter_prices_date.py  0007_alter_flower_image_alter_prices_date.py  0008_alter_flower_id_alter_flower_image_alter_prices_date_and_more.py  0009_alter_prices_date_alter_prices_id.py
FlowerShopFinanceTool/FlowerShopFinanceTool/static/css/: index.css  invoice.css
FlowerShopFinanceTool/FlowerShopFinanceTool/static/js/: index.js
FlowerShopFinanceTool/FlowerShopFinanceTool/templates/: index.html  invoice.html  login.html
FlowerShopFinanceTool/FlowerShopFinanceTool/utilities/: pdf.py
FlowerShopFinanceTool/FlowerShopFinanceTool/utils/: pdf.py
FlowerShopFinanceTool/static/css/: index.css
FlowerShopFinanceTool/static/js/: index.js
