[tool.poetry]
name = "flowershopfinancetool"
version = "0.1.0"
description = ""
authors = ["Derek <derekzongnanchen@gmail.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"
pytest = "^8.3.3"
django-extensions = "^3.2.3"
black = "^24.10.0"
weasyprint = "^63.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
